--- a/format_macros.tex
+++ b/format_macros.tex
@@ -56,11 +56,11 @@
 \providecommand{\AuthorName}{Christopher Michael Langstaff}
 \providecommand{\AuthorNameShort}{C.~Langstaff}
 \providecommand{\AuthorORCID}{0009-0000-3960-773X}
-\providecommand{\PaperVersion}{v1.1}
+\providecommand{\PaperVersion}{v1.2}
 \providecommand{\PaperLicense}{CC BY 4.0}
 \providecommand{\RepoDOI}{10.5281/zenodo.17119050}
 \providecommand{\RepoURL}{https://github.com/langstaffchristopherm-ops/Temporal_Relativity}
-\providecommand{\RepoCommit}{unknown}
+\providecommand{\RepoCommit}{v0.1.3}
 
 % --- Eτ Law naming ---
 \providecommand{\EtLawText}{E$\tau$~Law}
